--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,26 @@
 .tweet {
   border: 1px solid #ccc;
+    border-bottom: 0;
   width: 564px;
+    margin: 0 auto;
   min-height: 68px;
   padding: 10px;
   display: flex;
   font-family: "Helvetica", arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
+}
+
+.tweet:last-child{
+    border-bottom: 1px solid #cccccc;
+}
+
+.tweet-wrapper{
+    width: 50%;
+    margin: 0 auto;
+    border: 1px solid #AAA;
+    border-radius: 5px;
+    padding: 14px 0 14px;
 }
 
 .avatar {
